--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,12 @@
+# Backend Django
 Django==5.2.8
 djangorestframework==3.14.0
 django-cors-headers==4.3.1
 Pillow>=11.0.0
+
+# Desktop App (Kivy)
+"kivy[full]">=2.2.0
+requests>=2.31.0
+
+# Build tools
+pyinstaller>=6.0.0
