--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,4 +9,6 @@ dependencies = [
     "django-cors-headers==4.3.1",
     "djangorestframework==3.14.0",
     "pillow>=11.0.0",
+    "kivy[full]==2.2.0",
+    "pyinstaller==6.0.0",
 ]
