--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ django-cors-headers==4.3.1
 Pillow>=11.0.0
 
 # Desktop App (Kivy)
-"kivy[full]">=2.2.0
+kivy[full]>=2.2.0
 requests>=2.31.0
 
 # Build tools
